<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.csystem.android.app.upperserver.client.viewmodel.MainActivityViewModel"/>
        <import type="org.csystem.android.app.upperserver.client.viewmodel.HostInfo"/>
        <variable type="HostInfo" name = "hostInfo"/>
        <variable type="MainActivityViewModel" name = "viewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/edittext_host_hint_text"
            android:text="@={hostInfo.host}"/>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_connect_text"
            android:onClick="@{() -> viewModel.handleConnectButton()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_exit_text"
            android:onClick="@{() -> viewModel.handleExitButton()}"/>



    </LinearLayout>
</layout>
