<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="org.csystem.android.app.upperserver.client.viewmodel.MessageActivityViewModel"/>

        <variable type="MessageActivityViewModel" name = "viewModel"/>
        <variable type="String" name = "host"/>
        <variable type="String" name = "text"/>
        <variable type="String" name = "result"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MessageActivity">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/edittext_text_hint_text"
            android:text="@={text}"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_upper_text"
            android:onClick="@{() -> viewModel.handleUpperButton()}"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_exit_text"
            android:onClick="@{() -> viewModel.handleExitButton()}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{result}" />

    </LinearLayout>

</layout>